testdata/baselines/reference/compiler/tluaTablePositionalContextualTyping.errors.txt
tluaTablePositionalContextualTyping.tlua(7,21): error TS2322: Type 'number' is not assignable to type 'string'.
tluaTablePositionalContextualTyping.tlua(7,24): error TS2322: Type 'string' is not assignable to type 'number'.
tluaTablePositionalContextualTyping.tlua(11,46): error TS2322: Type 'number' is not assignable to type 'string'.
tluaTablePositionalContextualTyping.tlua(14,38): error TS2353: Object literal may only specify known properties, and '2' does not exist in type '{ 1: string; }'.


==== tluaTablePositionalContextualTyping.tlua (4 errors) ====
    // Contextual typing by numeric-keyed members.
    interface Pair {
        1: string;
        2: number;
    }
    local p: Pair = { "a", 2 };
    local bad: Pair = { 1, "b" };
                        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tluaTablePositionalContextualTyping.tlua:3:5: The expected type comes from property '1' which is declared here on type 'Pair'
                           ~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 tluaTablePositionalContextualTyping.tlua:4:5: The expected type comes from property '2' which is declared here on type 'Pair'
    
    // Contextual typing by a numeric index signature.
    local ns: { [i: number]: string } = { "a", "b" };
    local nbad: { [i: number]: string } = { "a", 1 };
                                                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 tluaTablePositionalContextualTyping.tlua:11:15: The expected type comes from this index signature.
    
    // Excess positional entry against a closed target.
    local excess: { 1: string } = { "a", "b" };
                                         ~~~
!!! error TS2353: Object literal may only specify known properties, and '2' does not exist in type '{ 1: string; }'.
    
    // Contextual parameter typing of a function-expression entry.
    local fns: { 1: (n: number) => number } = { function(n) return n; end };
    local all = {p, bad, ns, nbad, excess, fns};
    